<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/common_gradient_background"
    tools:context=".CallActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:elevation="2dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/common_gradient_background">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="경비원 호출"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </androidx.appcompat.widget.Toolbar>


    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@id/cv_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        tools:listitem="@layout/call_recyclerview_item" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:backgroundTint="@color/background_white_grey"
        android:src="@drawable/baseline_add_24"
        app:layout_constraintBottom_toTopOf="@id/cv_tab"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/fab_ripple_color" />


    <View
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:background="@color/black"
        app:layout_constraintBottom_toBottomOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_tab"
        android:layout_width="match_parent"
        android:layout_height="90dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_home_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginStart="30dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_home_unclicked"
                app:layout_constraintBottom_toTopOf="@id/tv_home"
                app:layout_constraintEnd_toStartOf="@id/btn_call"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_home"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_home"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_home_call"
                app:layout_constraintStart_toStartOf="@id/btn_home_call"
                app:layout_constraintTop_toBottomOf="@id/btn_home_call"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_call"
                app:layout_constraintBottom_toTopOf="@id/tv_call"
                app:layout_constraintEnd_toStartOf="@id/btn_search_call"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/btn_home_call"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_call"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_call"
                android:textColor="@color/black"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_call"
                app:layout_constraintStart_toStartOf="@id/btn_call"
                app:layout_constraintTop_toBottomOf="@id/btn_call"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_search_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_search_unclicked"
                app:layout_constraintBottom_toTopOf="@id/tv_search"
                app:layout_constraintEnd_toStartOf="@id/btn_list_call"
                app:layout_constraintHorizontal_chainStyle="spread"
                app:layout_constraintStart_toEndOf="@id/btn_call"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_search"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_search"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_search_call"
                app:layout_constraintStart_toStartOf="@id/btn_search_call"
                app:layout_constraintTop_toBottomOf="@id/btn_search_call"
                app:layout_constraintVertical_chainStyle="packed" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btn_list_call"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_marginEnd="30dp"
                android:background="@color/transparent"
                android:scaleType="centerCrop"
                android:src="@drawable/icon_list_unclicked"
                app:layout_constraintBottom_toTopOf="@id/tv_list"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toEndOf="@id/btn_search_call"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/tv_list"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/btn_list"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/btn_list_call"
                app:layout_constraintStart_toStartOf="@id/btn_list_call"
                app:layout_constraintTop_toBottomOf="@id/btn_list_call"
                app:layout_constraintVertical_chainStyle="packed" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>


</androidx.constraintlayout.widget.ConstraintLayout>